--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -2,6 +2,7 @@ $first-color: #fff;
 $second-color: #333;
 $third-color: #4b479e;
 $fourth-color: #6185d1;
+$fifth-color: #7dbd6e;
 $background-header: url(../images/background/bg-header.jpg);
 $background-header-logo: url(../images/menu-logo/menu-logo.jpg);
 //$background-opacity: 0.2;
@@ -23,6 +24,7 @@ $primary-font: 'Montserrat', sans-serif, 'Arial';
         .x__container__image {
             display: flex;
             align-items: center;
+            
             img{
                 width: 100%;
             }
