--- a/sass/style.scss
+++ b/sass/style.scss
@@ -378,6 +378,7 @@ footer {
                     padding: .5rem 0;
                     background-color: inherit;
                     border: none;
+                    border-radius: 0;
                     border-bottom: 2px solid $first-color;
                     color: $first-color;
                     cursor: text;
