--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -3,6 +3,7 @@ $second-color: #333;
 $third-color: #4b479e;
 $fourth-color: #6185d1;
 $fifth-color: #7dbd6e;
+$sixth-color: #db083e;
 $background-header: url(../images/background/bg-header.jpg);
 $background-header-logo: url(../images/menu-logo/menu-logo.jpg);
 //$background-opacity: 0.2;
